--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,22 +4,15 @@
   | default @import url()
   |============================
 */
+@import url('./modern-normalize.css');
 @import url('./reset.css');
-@import url('./vite-promo.css');
+@import url('./fonts.css');
+@import url('./variables.css');
+@import url('./base.css');
 @import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+@import url('./hero.css');
+@import url('./order.css');
+@import url('./vegetables.css');
+@import url('./call.css');
+@import url('./footer.css');
+@import url('./module.css');
