--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,38 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
+  <div class="container header-continer">
+    <nav class="header-nav">
+      <ul class="header-nav-list">
+        <li class="header-nav-item">How It Works</li>
+        <li class="header-nav-item">Vegetables</li>
+        <li class="header-nav-item">Contacts</li>
+      </ul>
+    </nav>
 
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+    <a class="header-logo-link" href="./index.html">
+      <svg class="header-logo-icon" width="16" height="16">
+        <use href="./img/javascript.svg#icon-logo"></use>
+      </svg>
+      <p class="header-logo-text">Veggieboost</p>
+    </a>
+
+    <button class="header-cart-button" type="button">
+      <svg class="header-cart-icon" width="20" height="20">
+        <use href="./img/javascript.svg#icon-cart"></use>
+      </svg>
+    </button>
+    <!----------- MENU-BUTTON --------------->
+    <!-- <button class="header-hamburger-button" type="button">
+      <svg class="header-hamburger-icon" width="24" height="24">
+        <use href="./img/javascript.svg#icon-hamburger"></use>
+      </svg>
+    </button> -->
+    <button class="header-hamburger-button" type="button">
+      <!-- <svg class="header-hamburger-icon" width="24" height="24">
+        <use href="./img/javascript.svg#icon-hamburger"></use>
+      </svg> -->
+      <div class="hamburger">
+        <div></div>
+      </div>
+    </button>
+  </div>
 </header>
