--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,7 +10,8 @@
         height="44"
       />
       <h2 class="hero-scnd-ttl">
-        organic <span>vegetables</span> to your diet today!
+        organic <span class="hero-scnd-span">vegetables</span> to your diet
+        today!
       </h2>
       <p class="hero-text">
         Our expertly curated vegetable baskets are made with the freshest,
